<!-- 文字资源 -->
<resources>
    <string name="app_name">LED Controller</string>
    <string name="edit_text">请输入要发送的字符</string>
    <string name="open_button">开启蓝牙</string>
    <string name="close_button">关闭蓝牙</string>
    <string name="find_button">搜索蓝牙</string>
    <string name="disconnect_bluetooth_button">断开连接</string>
    <string name="send_button_static">静止显示</string>
    <string name="send_button_left">向左滚动</string>
    <string name="send_button_up">向上滚动</string>
    <string name="send_button_down">向下滚动</string>
    <string name="listview_button">点击连接</string>
    <string name="listview_textview_mac">Mac:</string>
    <string name="listview_textview_connect">未连接</string>
    <string name="listview_textview_bond">未配对</string>
</resources>
