<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    tools:context=".MainActivity">
    
    <!-- 页面上布局 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <ListView
            android:id="@+id/list_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <!-- 页面下布局 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingLeft="5dp"
        android:paddingTop="5dp"
        android:paddingRight="5dp"
        android:paddingBottom="5dp">

        <EditText
            android:id="@+id/edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_text"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:textSize="16sp" />

        <!-- 页面下布局内部按钮布局 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:orientation="horizontal"
                >

                <Button
                    android:id="@+id/open_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="3dp"
                    android:layout_weight="1"
                    android:text="@string/open_button"
                    android:textSize="@dimen/button_text_size"
                    />

                <Button
                    android:id="@+id/close_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="3dp"
                    android:layout_weight="1"
                    android:text="@string/close_button"
                    android:textSize="@dimen/button_text_size"
                    />

                <Button
                    android:id="@+id/find_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="3dp"
                    android:layout_weight="1"
                    android:text="@string/find_button"
                    android:textSize="@dimen/button_text_size"
                    />

                <Button
                    android:id="@+id/disconnect_bluetooth_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/disconnect_bluetooth_button"
                    android:textSize="@dimen/button_text_size"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:orientation="horizontal"
                >

                <Button
                    android:id="@+id/send_button_static"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="3dp"
                    android:layout_weight="1"
                    android:text="@string/send_button_static"
                    android:textSize="@dimen/button_text_size"
                    />

                <Button
                    android:id="@+id/send_button_left"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="3dp"
                    android:layout_weight="1"
                    android:text="@string/send_button_left"
                    android:textSize="@dimen/button_text_size"
                    />



                <Button
                    android:id="@+id/send_button_up"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="3dp"
                    android:layout_weight="1"
                    android:text="@string/send_button_up"
                    android:textSize="@dimen/button_text_size"
                    />

                <Button
                    android:id="@+id/send_button_down"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/send_button_down"
                    android:textSize="@dimen/button_text_size"
                    />

            </LinearLayout>



        </LinearLayout>


    </LinearLayout>

</LinearLayout>